--- a/styles.css
+++ b/styles.css
@@ -46,16 +46,17 @@ nav {
 }
 
 .logo {
-    font-size: 32px;
+    font-size: 2rem;
 }
 
 .navBar {
     background-color: var(--primary);
-    height: 80px;
+    height: 5rem;
 }
 
 .image_container {
-    height: 646px;
+    position: relative;
+    height: 40.375rem;
     margin-top: 5%;
     margin-left: 5%;
     margin-right: 5%;
@@ -65,75 +66,75 @@ nav {
 
 .mainHeading {
     position: absolute;
-    font-size: 80px;
+    font-size: 5rem;
     font-weight: 300;
-    top: 14%;
-    left: 6%;
+    top: -7%;
+    left: 1.1%;
 }
 
 .subHead {
     font-family: 'DM Sans', sans-serif;
     font-style: italic;
     position: absolute;
-    font-size: 20px;
-    left: 6%;
-    top: 24%;
+    font-size: 1.25rem;
+    left: 1.1%;
+    top: 5.1%;
     color: var(--primary);
 }
 
 .main_img {
-    width: 60%;
+    width: 67%;
     position: absolute;
-    top: 60%;
+    top: 50%;
     left: 50%;
     transform: translate(-50%, -50%) rotate(-15deg);
 }
 
 .leaf_infront {
     z-index: 1;
-    width: 30%;
+    width: 32%;
     position: absolute;
-    top: 70%;
+    top: 58%;
     left: 35%;
     transform: translate(-50%, 18%);
     filter: blur(5px);
 }
 
 .main_img1 {
-    width: 40%;
+    width: 42%;
     position: absolute;
-    top: 60%;
-    left: 60%;
+    top: 45%;
+    left: 62%;
     transform: translate(30%,10%);
     filter: blur(3px);
 }
 
 .leaf_left {
     position: absolute;
-    top: 65%;
-    left: 10%;
+    top: 55%;
+    left: 6%;
     transform: translate(0%,20%);
 }
 
 .leaf_right {
     position: absolute;
-    top: 50%;
-    right: 25%;
+    top: 40%;
+    right: 23%;
     transform: translate(0%,20%);
 }
 
 .top_left_img {
-    width: 20%;
+    width: 22%;
     position: absolute;
-    top: 25%;
+    top: 5%;
     transform: translate(0%,20%);
     filter: blur(5px);
 }
 
 .behind_main {
-    width: 20%;
+    width: 22%;
     position: absolute;
-    top: 40%;
+    top: 30%;
     left: 45%;
     transform: translate(5%, -55%);
     filter: blur(7px);
@@ -141,19 +142,25 @@ nav {
 .top_right_img {
     width: 17%;
     position: absolute;
-    top: 20%;
-    right: 5%;
+    top: 5%;
+    right: 1%;
     transform: translate(0%,20%);
     filter: blur(2px);
 }
 
+.btnGrp {
+    margin-top: -10%;
+    height: 10rem;
+    position: relative;
+}
+
 .buyNow {
     position: absolute;
-    bottom: -13%;
+    top: 15%;
     left: 6%;
-    height: 50px;
-    width: 100px;
-    font-size: 16px;
+    height: 3.125rem;
+    width: 6.25rem;
+    font-size: 1rem;
     border: none;
     border-radius: 1000px;
     font-family: 'DM Sans', sans-serif;
@@ -171,7 +178,7 @@ nav {
 
 .discover {
     position: absolute;
-    bottom: -13%;
+    top: 15%;
     align-items: center;
     left: 15%;
     height: 50px;
@@ -184,7 +191,7 @@ nav {
 }
 
 .discover img {
-    height: 50px;
+    height: 3.125rem;
 }
 
 .discover p {
@@ -192,7 +199,8 @@ nav {
 }
 
 .image_container_hero {
-    height: 646px;
+    position: relative;
+    height: 40.375rem;
     margin-left: 5%;
     margin-right: 5%;
     background-color: var(--main);
@@ -201,30 +209,30 @@ nav {
 
 .mainHeadingHero {
     position: absolute;
-    font-size: 80px;
+    font-size: 5rem;
     font-weight: 300;
-    bottom:-39%;
-    left: 6%;
+    top:-7%;
+    left: 1.1%;
 }
 
 .mainSubheadingHero {
     font-family: 'DM Sans', sans-serif;
     position: absolute;
-    font-size: 40px;
-    bottom: -65%;
-    left: 6%;
+    font-size: 2.5rem;
+    top: 28.7%;
+    left: 1.1%;
     color: var(--dark);
 }
 
 .buyNowHero {
     position: absolute;
-    left: 6%;
-    bottom: -83%;
-    height: 60px;
-    width: 120px;
-    font-size: 16px;
+    left: 1.1%;
+    top: 65.7%;
+    height: 3.75rem;
+    width: 7.5rem;
+    font-size: 1rem;
     border: none;
-    border-radius: 20px;
+    border-radius: 1.25rem;
     font-family: 'DM Sans', sans-serif;
     color: var(--primary);
     background-color: var(--main_dark);
@@ -250,7 +258,7 @@ nav {
 
 .info {
     font-family: 'DM Sans', sans-serif;
-    width:150px;
+    width:9.375rem;
     margin: auto;
     text-align: center;
     padding: 2%;
@@ -258,7 +266,7 @@ nav {
 
 
 .right_img {
-    height: 646px;
+    height: 40.375rem;
     margin-left: 40%;
     position: relative;
     top: 41.7%;
@@ -310,4 +318,12 @@ nav {
     align-items: center;
     justify-content: space-around;
     margin-bottom: 1%;
+}
+
+/* using media queries to make this responsive */
+@media only screen and (max-width: 768px) {
+    * {
+        border: 1px solid red;
+        scroll-behavior: smooth;
+    }
 }
