--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,10 @@
     scroll-behavior: smooth;
 }
 
+main{
+        overflow: hidden;
+}
+
 body {
     background-color: var(--light_grey);
 }
@@ -83,7 +87,7 @@ nav {
 }
 
 .main_img {
-    width: 67%;
+    width: 60%;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -183,6 +187,7 @@ nav {
     left: 15%;
     height: 50px;
     cursor: pointer;
+    margin-left: 1rem;
     transition: 0.3s;
 }
 
@@ -216,6 +221,7 @@ nav {
 }
 
 .mainSubheadingHero {
+    width: 70%;
     font-family: 'DM Sans', sans-serif;
     position: absolute;
     font-size: 2.5rem;
@@ -263,7 +269,6 @@ nav {
     text-align: center;
     padding: 2%;
 }
-
 
 .right_img {
     height: 40.375rem;
@@ -318,12 +323,4 @@ nav {
     align-items: center;
     justify-content: space-around;
     margin-bottom: 1%;
-}
-
-/* using media queries to make this responsive */
-@media only screen and (max-width: 768px) {
-    * {
-        border: 1px solid red;
-        scroll-behavior: smooth;
-    }
 }
