--- a/media.css
+++ b/media.css
@@ -52,8 +52,8 @@
     .podium_img {
         width: 120%;
         position: absolute;
-        bottom: -47%;
-        left: 87%;
+        bottom: -30%;
+        left: 60%;
         transform: translate(-50%, -50%);
     }
     .right_img {
@@ -65,6 +65,10 @@
 
     .mainHeadingHero {
         width: 100%;
+    }
+
+    .mainSubheadingHero {
+        width: 85%;
     }
 
     .infoHead{
@@ -186,10 +190,10 @@
     }
 
     .main_img {
-        width: 250%;
+        width: 220%;
         position: absolute;
-        top: 50%;
-        left: 50%;
+        top: 55%;
+        left: 80%;
         transform: translate(-50%, -50%) rotate(-15deg);
     }
 
@@ -197,7 +201,7 @@
         z-index: 1;
         width: 100%;
         position: absolute;
-        top: 60%;
+        top: 50%;
         left: 10%;
         transform: translate(-50%, 18%);
         filter: blur(5px);
@@ -228,6 +232,9 @@
         transform: translate(0%,20%);
     }
     .top_left_img {
+        display: none;
+    }
+    .top_right_img {
         display: none;
     }
 
@@ -267,5 +274,29 @@
         height: 100%;
         font-size: 0.5rem;
         width: 100%;
+    }
+    .right_img{
+        width: 100%;
+        position: relative;
+        top:42.8%;
+        left: -40%;
+    }
+    .podium {
+        width: 130%;
+        left: 50%;
+        bottom: -20%;
+    }
+    .podium_img {
+        width: 180%;
+        bottom: -25%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    }
+
+    .footerText {
+        font-size: 0.5rem;
+    }
+    .icons{
+        scale: 0.6;
     }
 }
